--- a/app/assets/stylesheets/_page.scss
+++ b/app/assets/stylesheets/_page.scss
@@ -24,15 +24,6 @@
   }
 }
 
-.credit-content {
-  text-align: center;
-
-  .logo {
-    margin: auto;
-    width: 80px;
-  }
-}
-
 .grey-block {
   background: $flat;
   box-shadow: $deep-shadow;
